src/styles/blog.css
/* ... */
	pre.astro-code > code {
		all: unset;
	}

	pre {
		position: relative;
		--padding-block: 1rem;
		--padding-inline: 2rem;
		padding: var(--padding-block) var(--padding-inline);
		padding-right: calc(var(--padding-inline) * 2);

		overflow-y: hidden;
		overflow-x: auto;
	}

	@media (min-width: 37.75em) {
		pre {
			--padding-inline: 1.25rem;
			border-radius: 8px;
		}
	}

	.flex {
		display: flex;
		align-items: center;
	}

	img.cover {
		width: 100%;
		max-height: 50vh;
		object-fit: cover;
	}

	blockquote {
		font-size: 1.5rem;
		--padding-block: 1rem;
		--padding-inline: 1.25rem;
		--color: var(--theme-divider);

		display: flex;
		flex-direction: column;

		padding: var(--padding-block) var(--padding-inline);
		margin-left: calc(var(--padding-inline) * -1);
		margin-right: calc(var(--padding-inline) * -1);

		background: transparent;
		border-left: calc(var(--padding-inline) / 2) solid var(--color);
		border-radius: 0;
	}

	blockquote .source {
		font-weight: 500;
		color: var(--color);
		font-size: 1rem;
	}

	/* ICONOS */

	.social {
		display: block;
	}

	.socialicon {
		display: block;
		width: 1.25rem;
		height: 1.25rem;
		fill: var(--t-subdue);
		transition: fill linear 150ms;
	}

	.socialicon:hover {
		fill: var(--t-active);
	}

	/* .link_logo {
		margin-right: .7rem;
	} */

	.logo {
		box-sizing:content-box;
		width: 20px;
		height: 20px;
		padding: 5px ;
		border-radius: var(--br);
		fill: var(--color-gray-700);
		transform: translateY(0.25rem);

	}

	.logo:hover{
		background: var(--hoverchido);
	}

	.logo-profesional{
		transform: translateY(5px);
		fill: var(--color-gray-200);
		margin-right: 5px;
		padding: 0 !important;
	}

	.navicon {
		width: 1.1em;
		cursor: pointer;
		z-index: 10;
	}

	.hl {
		position: relative;
	}

	.hl::after {
		content: '';
		position: absolute;
		bottom: .2rem;
		left: 0;
		right: 0;
		width: 100%;
		height: 30%;
		background-color: rgba(var(--theme-accent-rgb), .2);
		z-index: -1;
		transition: height .3s;
	}

	.hl:hover::after {
		height: 70%;
	}

	.slider__img {
		scroll-snap-align: start;
		border-radius: var(--br);
		height: 280px;
		object-fit: contain;
	}

	.links {
        margin: 2rem 0;
        display: flex;
        flex-flow: column wrap;
        padding-inline-start: 40px;
        gap: .5rem;
    }

    .links span {
        display: flex;
        align-content: center;
    }

    .links span a {
        transform: translateY(-3px);

    }
    .links span a:hover {
        color: var(--theme-accent)
        
    }


	.boton {
        cursor: pointer;
        border: none;
        padding: 0.3rem 1rem 0.5rem ;
        background-color: var(--color-gray-900);
        text-align: center;
        border-radius: var(--br);
        color: var(--color-gray-100)!important;
        font-weight: 600;
        transition: background var(--transition-time) !important;
    }
    .boton:hover{
        background: var(--theme-accent)!important;
    }


	@keyframes appear{
        0%{
            opacity: 0%;
        }
        100%{
            opacity: 100%;
        }
    }

